projects/compiler/test/typechecker/bindingdecl/error_invalid_destructuring_tuple_too_few.2.out
Error at %FILE_NAME%:2:5
Incorrect number of destructuring arguments for tuple
  |  val (a, b) = x
         ^
Expected 3, but 2 were provided
(You can use '_' to denote positions that you wish to discard)
