projects/compiler/test/typechecker/bindingdecl/error_invalid_destructuring_tuple_too_few.2.abra
val x = (1, 2, 3)
val (a, b) = x